--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,19 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+@import 'adminlte';
+
+body.dark-mode {
+    @import 'adminlte-dark-mode';
+}
+
+#dark-mode-icon {
+    transition: opacity 0.3s ease-in-out;
+    opacity: 1;
+}
+
+.fade-out {
+    opacity: 0;
+}
+
